Add premium intent segment analytics
